--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
         <div class="divButtons">
             <button class="buttonDecrease" id="decrease">Decrease</button>
-            <button class="buttonReset" id="Reset">Reset</button>
-            <button class="buttonIncrease" id="Increase">Increase</button>
+            <button class="buttonReset" id="reset">Reset</button>
+            <button class="buttonIncrease" id="increase">Increase</button>
         </div>
     </main>
 
